snapshots/syntax/library/statements/unload/unload_at_module_level.snap
---
source: src/syntax/library/statements/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: UnloadStatement
      children:
        - kind: UnloadKeyword
          text: Unload
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: frmMain
        - kind: Newline
          text: "\n"
